activity in progress is sticky, overlap bug solved

--- a/app/assets/stylesheets/components/_card_agenda.scss
+++ b/app/assets/stylesheets/components/_card_agenda.scss
@@ -1,3 +1,11 @@
+.margin-from-navbar {
+  height: 60px;
+}
+
+.list-activities {
+  position: relative;
+}
+
 .card-agenda {
   background-color: #073b4c;
   min-height: fit-content;
@@ -5,6 +13,7 @@
   margin-right: 15px;
   padding: 1px;
   border-radius: 5px;
+  width: 100%;
 }
 
 .starting-time {
@@ -32,6 +41,7 @@
   font-size: x-large;
   font-weight: 600;
   border-radius: 5px;
+  width: 100%;
 }
 
 .journey {
@@ -57,9 +67,4 @@
   position: fixed;
   top:60px;
   z-index: 10;
-  width: 100%;
-}
-
-.list-activities {
-  position: relative;
 }
